--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "0.21.4",
     "bootstrap": "5.1.3",
     "core-js": "3.19.0",
+    "querystring": "^0.2.1",
     "vue": "3.2.11",
     "vue-router": "4.0.11",
     "vuex": "4.0.2"
