--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "bootstrap": "5.1.3",
     "core-js": "3.19.0",
     "querystring": "^0.2.1",
+    "tslib": "^2.3.1",
     "vue": "3.2.11",
     "vue-router": "4.0.11",
-    "vuex": "4.0.2"
+    "vuex": "4.0.2",
+    "vuex-class-modules": "^1.3.0"
   },
   "devDependencies": {
     "@types/jest": "27.0.2",
