--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,14 +20,15 @@
     "paths": {
       "@/*": [
         "src/*"
-      ]
+      ],
+      "tslib" : ["./node_modules/tslib/tslib.d.ts"]
     },
     "lib": [
       "esnext",
       "dom",
       "dom.iterable",
       "scripthost"
-    ]
+    ],
   },
   "include": [
     "src/**/*.ts",
