--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "vue": "3.2.11",
     "vue-router": "4.0.11",
     "vuex": "4.0.2",
-    "vuex-class-modules": "^1.3.0"
+    "vuex-class-modules": "^1.3.0",
+    "vue-property-decorator": "^8.4.2"
   },
   "devDependencies": {
     "@types/jest": "27.0.2",
@@ -48,6 +49,7 @@
     "sass": "^1.43.4",
     "sass-loader": "10.2.0",
     "typescript": "4.4.4",
-    "vue-jest": "5.0.0-alpha.10"
+    "vue-jest": "5.0.0-alpha.10",
+    "vue-template-compiler": "^2.6.11"
   }
 }
