--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,13 +20,14 @@
     "querystring": "^0.2.1",
     "tslib": "^2.3.1",
     "vue": "3.2.11",
+    "vue-property-decorator": "^8.4.2",
     "vue-router": "4.0.11",
     "vuex": "4.0.2",
-    "vuex-class-modules": "^1.3.0",
-    "vue-property-decorator": "^8.4.2"
+    "vuex-class-modules": "^1.3.0"
   },
   "devDependencies": {
     "@types/jest": "27.0.2",
+    "@types/node": "^16.11.9",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
     "@vue/cli-plugin-babel": "4.5.13",
