--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,14 +16,16 @@
   "dependencies": {
     "axios": "0.21.4",
     "bootstrap": "5.1.3",
-    "core-js": "3.19.0",
     "querystring": "^0.2.1",
     "tslib": "^2.3.1",
-    "vue": "3.2.11",
-    "vue-property-decorator": "^8.4.2",
-    "vue-router": "4.0.11",
-    "vuex": "4.0.2",
-    "vuex-class-modules": "^1.3.0"
+    "core-js": "^3.6.5",
+    "vue": "^3.0.0",
+    "vue-class-component": "^8.0.0-0",
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.0-0",
+    "vuex-class": "^0.3.2",
+    "vuex-class-modules": "^1.2.0"
   },
   "devDependencies": {
     "@types/jest": "27.0.2",
