--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,12 @@
     "test": "vue-cli-service test:unit && vue-cli-service test:e2e"
   },
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
     "axios": "0.21.4",
     "bootstrap": "5.1.3",
+    "core-js": "^3.6.5",
     "querystring": "^0.2.1",
     "tslib": "^2.3.1",
-    "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-property-decorator": "^9.1.2",
