--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "5.1.3",
     "core-js": "^3.6.5",
     "querystring": "^0.2.1",
+    "ts-jest": "^27.0.7",
     "tslib": "^2.3.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
